# netbox_mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
docs/: mcptools.md  natural-language-queries.md  netbox-devices-api.md  netbox-prefixes-api.md  read-only-implementation.md
examples/: README.md  mcptools_commands.sh
src/: server.py
src/config/: __init__.py  netbox.py
src/models/: __init__.py  circuit.py  device.py  prefix.py  rack.py  site.py  vlan.py
src/tools/: __init__.py  circuits.py  devices.py  prefixes.py  sites.py  vlans.py
tests/: __init__.py  conftest.py  test_netbox_client.py  test_query_parsing.py  test_server.py
