[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netbox-mcp"
version = "0.1.0"
description = "FastMCP server for NetBox API integration"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Chad Kunsman", email = ""}
]
dependencies = [
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "pynetbox>=7.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]
